app is ready for demo, there are only some little bugs left