@@ -4,6 +4,7 @@ import com.akosgyongyosi.cashflow.dto.PlanLineItemRequestDTO;
 import com.akosgyongyosi.cashflow.dto.PlanLineItemResponseDTO;
 import com.akosgyongyosi.cashflow.entity.CashflowPlan;
 import com.akosgyongyosi.cashflow.entity.PlanLineItem;
+import com.akosgyongyosi.cashflow.entity.LineItemType;
 import com.akosgyongyosi.cashflow.entity.TransactionCategory;
 import com.akosgyongyosi.cashflow.entity.Frequency;
 import com.akosgyongyosi.cashflow.entity.Currency;
@@ -13,16 +14,22 @@ import com.akosgyongyosi.cashflow.repository.TransactionCategoryRepository;
 import com.akosgyongyosi.cashflow.service.AssumptionIdGeneratorService;
 import com.akosgyongyosi.cashflow.service.forecast.CashflowCalculationService;
 import com.akosgyongyosi.cashflow.service.fx.PlanCurrencyResolver;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.akosgyongyosi.cashflow.service.fx.RateLookupService;
+import com.akosgyongyosi.cashflow.dto.FxWarningDTO;
+import com.akosgyongyosi.cashflow.dto.RateLookupResultDTO;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.transaction.annotation.Transactional;
+import lombok.extern.slf4j.Slf4j;
 
+import java.time.LocalDate;
 import java.util.Optional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/cashflow-plans")
+@Slf4j
+@SuppressWarnings({"java:S107","null"}) // S107: constructor parameter count, null: static analysis over null-safety
 public class PlanLineItemController {
 
     private final CashflowPlanRepository planRepository;
@@ -30,30 +37,40 @@ public class PlanLineItemController {
     private final TransactionCategoryRepository categoryRepository;
     private final AssumptionIdGeneratorService assumptionIdGenService;
     private final CashflowCalculationService cashflowCalculationService;
+    private final RateLookupService rateLookupService;
+    private final com.akosgyongyosi.cashflow.service.fx.TransactionDateRangeFxService transactionDateRangeFxService;
+    private final com.akosgyongyosi.cashflow.service.CashflowPlanService cashflowPlanService;
 
-    @Autowired
     public PlanLineItemController(
             CashflowPlanRepository planRepository,
             PlanLineItemRepository lineItemRepository,
             TransactionCategoryRepository categoryRepository,
             AssumptionIdGeneratorService assumptionIdGenService,
-            CashflowCalculationService cashflowCalculationService
+            CashflowCalculationService cashflowCalculationService,
+            RateLookupService rateLookupService,
+            com.akosgyongyosi.cashflow.service.fx.TransactionDateRangeFxService transactionDateRangeFxService,
+            com.akosgyongyosi.cashflow.service.CashflowPlanService cashflowPlanService
     ) {
         this.planRepository = planRepository;
         this.lineItemRepository = lineItemRepository;
         this.categoryRepository = categoryRepository;
         this.assumptionIdGenService = assumptionIdGenService;
         this.cashflowCalculationService = cashflowCalculationService;
+        this.rateLookupService = rateLookupService;
+        this.transactionDateRangeFxService = transactionDateRangeFxService;
+        this.cashflowPlanService = cashflowPlanService;
     }
 
     @PostMapping("/{planId}/line-items")
-    public ResponseEntity<?> createLineItem(
-            @PathVariable Long planId,
-            @RequestBody PlanLineItemRequestDTO dto
+    @Transactional
+    public ResponseEntity<Object> createLineItem(
+        @org.springframework.lang.NonNull @PathVariable Long planId,
+        @org.springframework.lang.NonNull @RequestBody PlanLineItemRequestDTO dto
     ) {
         try {
             CashflowPlan plan = planRepository.findById(planId)
                     .orElseThrow(() -> new RuntimeException("Plan not found with ID: " + planId));
+        log.debug("[CREATE] planId={} type={} title={} incomingAssumptionId={}", planId, dto.getType(), dto.getTitle(), dto.getAssumptionId());
 
             PlanLineItem lineItem = new PlanLineItem();
             lineItem.setPlan(plan);
@@ -90,7 +107,7 @@ public class PlanLineItemController {
                     lineItem.setTransactionDate(null);
                     break;
                 default:
-                    throw new RuntimeException("Unsupported LineItemType: " + dto.getType());
+                    throw new IllegalArgumentException("Unsupported LineItemType: " + dto.getType());
             }
 
             if (dto.getCategoryId() != null) {
@@ -99,51 +116,139 @@ public class PlanLineItemController {
             }
 
             if (dto.getAssumptionId() == null) {
-                Long newId = assumptionIdGenService.getNextAssumptionId();
-                lineItem.setAssumptionId(newId);
+                Long reusableId = tryFindReusableAssumptionId(dto);
+                if (reusableId != null) {
+                    lineItem.setAssumptionId(reusableId);
+                } else {
+                    Long newId = assumptionIdGenService.getNextAssumptionId();
+                    lineItem.setAssumptionId(newId);
+                }
             } else {
                 lineItem.setAssumptionId(dto.getAssumptionId());
             }
 
-            PlanLineItem saved = lineItemRepository.save(lineItem);
+            PlanLineItem saved = lineItemRepository.save(lineItem); // initial persist to obtain ID
 
+            // Desired semantics: only NEW assumptions (isApplied == false) should be processed.
+            // Existing assumptions retain isApplied=true and are skipped by their strategies.
+            // Ensure the new item is present in the in-memory collection before applying.
+            if (plan.getLineItems() == null) {
+                plan.setLineItems(new java.util.ArrayList<>()); // avoid NPE
+            }
+            if (plan.getLineItems().stream().noneMatch(li -> li.getId() != null && li.getId().equals(saved.getId()))) {
+                // Add if not already included (depends on JPA persistence context configuration)
+                plan.getLineItems().add(saved);
+            }
+
+            // Metrics before applying
+            long appliedBefore = plan.getLineItems().stream().filter(li -> Boolean.TRUE.equals(li.getIsApplied())).count();
+            long totalBefore = plan.getLineItems().size();
+            log.debug("[APPLY-BEFORE] planId={} appliedBefore={}/{}", planId, appliedBefore, totalBefore);
+
+            // Pre-fetch FX rates for relevant dates
+            ensureFxRatesForPlan(plan);
+
+            // Apply all assumptions – strategies skip those already applied (isApplied == true)
             cashflowCalculationService.applyAllAssumptions(plan);
-            planRepository.save(plan);
 
-            return ResponseEntity.ok(toResponseDTO(saved));
+            long appliedAfter = plan.getLineItems().stream().filter(li -> Boolean.TRUE.equals(li.getIsApplied())).count();
+            long totalAfter = plan.getLineItems().size();
+            log.debug("[APPLY-AFTER] planId={} newItemId={} assumptionId={} appliedAfter={}/{}", planId, saved.getId(), saved.getAssumptionId(), appliedAfter, totalAfter);
+
+            // Persist ALL line items whose flags may have changed (single bulk save avoids double save of new item)
+            lineItemRepository.saveAll(plan.getLineItems());
+            planRepository.save(plan);
+            log.debug("[CREATE-DONE] planId={} itemId={} isApplied={} baselineTxCount={}", planId, saved.getId(), saved.getIsApplied(), plan.getBaselineTransactions() == null ? -1 : plan.getBaselineTransactions().size());
+
+            return ResponseEntity.ok(toResponseDTO(saved, plan));
 
         } catch (Exception e) {
             return ResponseEntity.badRequest().body("Error creating line item: " + e.getMessage());
         }
     }
 
+    private Long tryFindReusableAssumptionId(PlanLineItemRequestDTO dto) {
+        try {
+            PlanLineItem match = null;
+            if (dto.getType() == LineItemType.ONE_TIME && dto.getTransactionDate() != null) {
+                match = lineItemRepository.findFirstByTitleIgnoreCaseAndTypeAndTransactionDate(dto.getTitle(), dto.getType(), dto.getTransactionDate());
+            } else if (dto.getType() == LineItemType.RECURRING && dto.getStartDate() != null && dto.getFrequency() != null) {
+                match = lineItemRepository.findFirstByTitleIgnoreCaseAndTypeAndStartDateAndFrequency(dto.getTitle(), dto.getType(), dto.getStartDate(), dto.getFrequency());
+            } else if (dto.getType() == LineItemType.CATEGORY_ADJUSTMENT && dto.getStartDate() != null && dto.getPercentChange() != null) {
+                match = lineItemRepository.findFirstByTitleIgnoreCaseAndTypeAndStartDateAndPercentChange(dto.getTitle(), dto.getType(), dto.getStartDate(), dto.getPercentChange());
+            }
+            return match != null ? match.getAssumptionId() : null;
+        } catch (Exception ex) {
+            log.debug("[ASSUMPTION-ID-REUSE] signature search failed: {}", ex.getMessage());
+            return null;
+        }
+    }
+
     @GetMapping("/{planId}/line-items")
-    public ResponseEntity<List<PlanLineItemResponseDTO>> getLineItemsForPlan(@PathVariable Long planId) {
-        List<PlanLineItemResponseDTO> items = lineItemRepository.findByPlanId(planId).stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<PlanLineItemResponseDTO>> getLineItemsForPlan(@org.springframework.lang.NonNull @PathVariable Long planId) {
+        Optional<CashflowPlan> planOpt = planRepository.findById(planId);
+        if (planOpt.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        CashflowPlan plan = planOpt.get();
+        
+    List<PlanLineItemResponseDTO> items = lineItemRepository.findByPlanId(planId).stream()
+        .map(item -> toResponseDTO(item, plan))
+        .toList();
         return ResponseEntity.ok(items);
     }
 
     @DeleteMapping("/{planId}/line-items/{itemId}")
-    public ResponseEntity<Void> deleteLineItem(@PathVariable Long planId, @PathVariable Long itemId) {
-        PlanLineItem item = lineItemRepository.findById(itemId)
-                .orElseThrow(() -> new RuntimeException("LineItem not found with ID: " + itemId));
-
+    public ResponseEntity<Void> deleteLineItem(@org.springframework.lang.NonNull @PathVariable Long planId, @org.springframework.lang.NonNull @PathVariable Long itemId) {
+        // Check if item exists - return 404 if already deleted
+        Optional<PlanLineItem> itemOpt = lineItemRepository.findById(itemId);
+        if (itemOpt.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        
+        PlanLineItem item = itemOpt.get();
         if (!item.getPlan().getId().equals(planId)) {
             return ResponseEntity.status(403).build();
         }
 
         CashflowPlan plan = item.getPlan();
+        
+        // CRITICAL FIX: When deleting assumptions, especially CATEGORY_ADJUSTMENT,
+        // we MUST rebuild baseline from scratch because category adjustments 
+        // mutate existing transaction amounts. Simply reapplying assumptions
+        // won't restore the original values!
+        
+        // 1. Delete the line item first
         lineItemRepository.delete(item);
-
+        
+        // 2. Clear all baseline transactions and rebuild from source
+        cashflowPlanService.regenerateBaseline(plan.getId());
+        
+        // 3. Refresh plan to get the regenerated baseline
+        plan = planRepository.findById(plan.getId())
+                .orElseThrow(() -> new RuntimeException("Plan not found"));
+        
+        // 4. Reset all remaining assumptions to not-applied and persist immediately
+        if (plan.getLineItems() != null) {
+            for (PlanLineItem remainingItem : plan.getLineItems()) {
+                remainingItem.setIsApplied(false);
+            }
+            lineItemRepository.saveAll(plan.getLineItems());
+        }
+        
+        // 5. Refresh plan again to get updated line items
+        plan = planRepository.findById(plan.getId())
+                .orElseThrow(() -> new RuntimeException("Plan not found"));
+        
+        // 6. Re-apply all remaining assumptions from scratch on clean baseline
+        ensureFxRatesForPlan(plan);
         cashflowCalculationService.applyAllAssumptions(plan);
         planRepository.save(plan);
 
         return ResponseEntity.noContent().build();
     }
 
-    private PlanLineItemResponseDTO toResponseDTO(PlanLineItem item) {
+    private PlanLineItemResponseDTO toResponseDTO(PlanLineItem item, CashflowPlan plan) {
         PlanLineItemResponseDTO dto = new PlanLineItemResponseDTO();
         dto.setId(item.getId());
         dto.setAssumptionId(item.getAssumptionId());
@@ -157,6 +262,60 @@ public class PlanLineItemController {
         dto.setPercentChange(item.getPercentChange());
         dto.setCategoryName(item.getCategory() != null ? item.getCategory().getName() : null);
         dto.setCurrency(item.getCurrency());
+        
+        // Populate structured FX warnings + metadata if currency differs from plan base
+        Currency planBaseCurrency = PlanCurrencyResolver.resolve(plan);
+        if (item.getCurrency() != null && item.getCurrency() != planBaseCurrency) {
+            LocalDate txDate = item.getTransactionDate() != null ? item.getTransactionDate() : item.getStartDate();
+            if (txDate != null) {
+                try {
+                    RateLookupResultDTO res = rateLookupService.lookup(item.getCurrency(), planBaseCurrency, txDate);
+                    dto.setWarnings(res.getWarnings());
+                    dto.setRateMeta(res.getMeta());
+                    // Legacy single-string warning retained for backward compatibility (first warning summary)
+                    if (!res.getWarnings().isEmpty()) {
+                        FxWarningDTO first = res.getWarnings().get(0);
+                        dto.setWarning(first.getMessage());
+                    } else {
+                        dto.setWarning(String.format("Currency conversion: %s → %s rate date %s", item.getCurrency(), planBaseCurrency, res.getMeta().getRateDateUsed()));
+                    }
+                } catch (Exception ex) {
+                    dto.setWarning("FX lookup failed: " + ex.getMessage());
+                }
+            }
+        }
+        
         return dto;
+    }
+    
+    /**
+     * Helper method to pre-fetch FX rates for all line item dates in a plan.
+     * Gathers all transaction dates from line items and ensures rates exist + 1 year forward.
+     */
+    private void ensureFxRatesForPlan(CashflowPlan plan) {
+        try {
+            java.util.Set<LocalDate> allDates = new java.util.HashSet<>();
+            
+            // Gather all line item dates
+            for (PlanLineItem item : plan.getLineItems()) {
+                if (item.getTransactionDate() != null) {
+                    // ONE_TIME
+                    allDates.add(item.getTransactionDate());
+                } else if (item.getStartDate() != null && item.getEndDate() != null) {
+                    // RECURRING or CATEGORY_ADJUSTMENT
+                    allDates.add(item.getStartDate());
+                    allDates.add(item.getEndDate());
+                }
+            }
+            
+            // Pre-fetch rates for all dates + 1 year forward
+            if (!allDates.isEmpty()) {
+                transactionDateRangeFxService.ensureRatesForTransactionsWithForwardCoverage(allDates);
+            }
+        } catch (Exception ex) {
+            // Log but don't fail - rates will be fetched on-demand if needed
+            org.slf4j.LoggerFactory.getLogger(getClass())
+                .warn("Failed to pre-fetch FX rates for plan {}: {}", plan.getId(), ex.getMessage());
+        }
     }
 }
